[package]
name = "shclient"
version = "0.1.0"
authors = ["Ken <kenakioreed@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shclient_gen={path="../shclient_gen"}
egaku2d={path="../egaku2d"}
axgeom = "1.6"

[patch.'https://github.com/tiby312/dinotree_alg']
dinotree_alg={path="../dinotree_alg"}

[patch.'https://github.com/tiby312/duckduckgeo']
duckduckgeo={path="../duckduckgeo"}


[patch.crates-io]
axgeom={path="../axgeom"}



#[profile.release]
#lto = true